Fix rounded covers for multi-image works

--- a/MaterialSkin/HTML/material/html/css/covers/round.css
+++ b/MaterialSkin/HTML/material/html/css/covers/round.css
@@ -1,9 +1,10 @@
 .image-grid-item-img, .np-grid-item img, .np-grid-sect .pq-current, .lms-image-grid .list-active, .lms-image-grid .highlight, .np-grid-sect .list-active,
-#browse-list .browse-html img, .np-info-text img, .np-info-text-desktop img, .np-info-text-full img, .np-info-text-full-desktop img, .inline-image {
+#browse-list .browse-html img, .np-info-text img, .np-info-text-desktop img, .np-info-text-full img, .np-info-text-full-desktop img, .inline-image,
+.image-grid-item .mi {
  border-radius:9px!important;
 }
 
-.lms-list img:not(.image-grid-item-img):not(.svg-list-img):not(.multi-disc), .pmgr-cover img, .np-info .lms-list img, .sub-cover, .menu-image {
+.lms-list img:not(.image-grid-item-img):not(.svg-list-img):not(.multi-disc):not(.mi-0):not(.mi-1):not(.mi-2):not(.mi-3), .pmgr-cover img, .np-info .lms-list img, .sub-cover, .menu-image, .mi .v-avatar {
  border-radius:4px!important;
 }
 
